@@ -2,7 +2,6 @@ package org.codedefenders.util;
 
 import java.io.IOException;
 import java.net.URL;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -22,7 +21,7 @@ public class ResourceUtils {
         Path path = Paths.get(url.getPath());
 
         try {
-            return new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
+            return Files.readString(path);
         } catch (IOException e) {
             assume().withMessage("IOException while reading file '%s'.", path.toString()).fail();
             return null;
